# tradingbot

./: .coverage  .env.template  .gitignore  .pre-commit-config.yaml  .salt  .windsurfignore  12_DOMAIN_ARCHITECTURE.md  AGENT_ARCHITECTURE_AUDIT_REPORT.md  ALL_MODULES_BY_DIRECTORY.txt  ALPHA_EVOLVE_GUIDE.md  APEX_FI_COMPLETE.md  AUTONOMOUS_FINANCIAL_INTELLIGENCE_README.md  AUTONOMOUS_SUPERINTELLIGENCE_GUIDE.md  AUTONOMOUS_SUPERINTELLIGENCE_README.md  AUTONOMOUS_SYSTEM_COMPLETE.md  BACKGROUND_SERVICES.md  CAPABILITIES_SUMMARY.md  CODEBASE_INVENTORY.json  COMPLETE_INTEGRATION_ACTION_PLAN.md  COMPLETE_INTEGRATION_SUMMARY.md  COMPLETE_MODULE_INTEGRATION_AUDIT.md  COMPLETE_SYSTEMS_INTEGRATION_REPORT.md  DECISION_LAYER_COMPLETE_ANALYSIS.md  DEPLOY_FREE_CLOUD.py  Dockerfile  Dockerfile.production  ELITE_COMPLETION_V2_GUIDE.md  FIXES_APPLIED_REPORT.md  FULL_CODEBASE_AUDIT_REPORT.md  FULL_SYSTEM_REMEDIATION_REPORT.md  HIVEMIND_ARCHITECTURE.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION_ADDITIONS_FOR_BACKGROUND.py  INTEGRATION_ADDITIONS_FOR_MAIN.py  INTEGRATION_ADDITIONS_FOR_SCHEDULED.py  INTEGRATION_GUIDE.md  INTELLIGENCE_CORE_ASSESSMENT.md  LAUNCH_INSTRUCTIONS.md  MIGRATION_PLAN.md  MISSING_INTEGRATION_REPORT.json  (+109 more)
advanced_systems 2/: red_team_blue_team.py
agents 2/: __init__.py  base_agent.py  coordinator.py  specialized_agents.py
alerts/: alerts_20251127.json  alerts_20251128.json  alerts_20251129.json  alerts_20251201.json  alerts_20251203.json
alphaalgo_data/: data_pipeline.db  governance.db  integration_verification_20260306_191712.json  integration_verification_20260307_114200.json  module_registry.json  self_repair.db
alphaalgo_demo_data/: data_pipeline.db  governance.db  security.db  self_repair.db
api/: __init__.py  api_server.py  authentication.py  rate_limiter.py
architecture_evolution_state/: architecture_evolution_state.json
automation/: trade_journal.py
autonomous_learner_data/: knowledge_base.db  learning_database.db  learning_monitor.db  session_216f83a84728.json  session_989f469b7f9f.json  session_b3a2f751435e.json  session_c216d76ac9a0.json  session_f0f9e7dbf3ca.json  test_results.db  transfer_log.db
autonomous_logs/: complete_work_report_20260205_200131.txt  fix_all_report_20251208_181043.txt  fix_all_report_20251208_185814.txt  safe_report_20251208_200044.txt
backtesting/: backtest_engine.py
brain_state/: brain_state.json
broker/: __init__.py  binance_broker.py  broker_interface.py  ib_broker.py
checkpoints/: 03d07060f12c6960.pkl  0d6bb27646e156b0.pkl  104d88d0fc1a2773.pkl  1ea4e08e97a13f05.pkl  1fe0558bba931d75.pkl  229db76b29c02a35.pkl  30c6e1e9f4b59c5c.pkl  35e3accae739417e.pkl  4bb7f21f7c369d79.pkl  76cb5f180c4c7780.pkl  8175b86d1a313bec.pkl  8333ab6c99402151.pkl  84415819e1ad9ad6.pkl  8bc9ad9189a0ecb3.pkl  9233ebed1adf2fc2.pkl  94a1bbbd6f2c4b78.pkl  b09f07485d5a4cdd.pkl  b531b06e1d64eadd.pkl  c2e0cc44c418c990.pkl  c5b3dba6e5b32797.pkl  d0a280da0e5aa264.pkl  d3b1cbbd15a9956a.pkl  ddf874f6c3316147.pkl  e1a33aad48b90401.pkl  f28430e6d8308766.pkl  fafd69f755086833.pkl  fc53598b3ff41531.pkl
code_repository/: ALL_PHASES_COMPLETE.md  AUTO_FIX_REPORT.md  COMPLETE_SYSTEM_FINAL.md  CRITICAL_FIXES_IMPLEMENTATION.md  CRITICAL_SCAN_REPORT.md  ELITE_TRADING_BOT_IMPROVEMENT_ROADMAP.md  FINAL_IMPLEMENTATION_SUMMARY.md  FIXES_APPLIED.md  PHASE_2_IMPLEMENTATION_COMPLETE.md  QUICK_REFERENCE_IMPLEMENTED_FIXES.md  THREE_PILLARS_COMPLETION_REPORT.md  analysis_improvements.md  execution_improvements.md  implementation_plan.md  metadata.json  monitoring_improvements.md  three_pillars_integration.md  three_pillars_summary.md
compliance/: __init__.py  compliance_monitor.py  trade_surveillance.py
config/: .env.template  README.md  adaptive_config.yaml  adaptive_systems_config.yaml  alphaalgo_2_0.yaml  alphaalgo_config.yaml  alphaalgo_master_config.yaml  api_keys.json.example  base.yaml  complete_config.yaml  config.yaml  dashboard_config.yaml  deployment.yaml  deployment_config.json  docker-compose.yml  elite_config.yaml  elite_mt5_config.yaml  eternal_evolution_config.yaml  eurusd_h1_ml.yaml  eurusd_quantum.yaml  eurusd_scalping.yaml  eurusd_swing.yaml  exit_strategies_config.yaml  grafana_dashboard.json  internet_config.yaml  live_trading_config.yaml  loss_learning_config.yaml  multi_symbol.yaml  multi_symbol_commodities.yaml  multi_symbol_crosses.yaml  multi_symbol_diversified.yaml  multi_symbol_exotics.yaml  multi_symbol_majors.yaml  network_config.yaml  opportunity_scanner_config.yaml  orchestrator_config.yaml  paper_trading_config.yaml  production_config.yaml  profitability_config.yaml  risk_management_config.yaml  (+9 more)
dashboard/: __init__.py  dashboard.py  portfolio_health.py
data_evolution_state/: data_evolution_state.json
decision_layer_data/: decisions.db
deploy/: deploy_production.py  deployment_report_20251203_213209.json  production_config.yaml  run_production.py
deployment_logs/: report_20251004_182858.json  report_week0_20251006_230639.json  report_week0_20251007_081156.json
diagnostics/: architecture_scan.json  bat-execution-plan.json  changes-log.txt  check_processes.ps1  config-params-20251008T171602.json  connectivity-test-results.json  connectivity_test.ps1  continuous_monitor.ps1  create_backup.ps1  create_inventory.ps1  daily_maintenance.ps1  deps-audit-20251008.json  final_update.ps1  health-20251008-003941.json  health-daily-20251008.json  health_monitor.ps1  inventory-20251007-121051.json  inventory-20251008-003908.json  inventory-20251008T171602.json  maintenance-20251008.json  monitoring-history-20251008-005004.json  position_sizing_improvements.py  report-20251007-200315.json  report-20251008-004700.json  status_update.ps1  summary.txt  system_audit_20251221_103807.json  system_audit_20251221_110035.json  system_audit_20251221_110127.json  system_audit_20251221_111802.json  test-report-20251007-121051.json  test_connectivity.ps1  validation_report_20251008_123118.json
docs/: 100_ENHANCEMENTS_ROADMAP.md  300_NEW_IDEAS_AUTONOMOUS_FINANCIAL_INTELLIGENCE.md  ARCHITECTURE.md  COMPLETE_MODULE_INVENTORY.md  CRITICAL_SCAN_REPORT.md  (+22 more)
(+11740 files in other folders)
