[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-bot"
version = "2.0.0"
description = "AlphaAlgo Elite Trading Bot - AI-Powered Algorithmic Trading System"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "AlphaAlgo Team", email = "peterkiragu68@outlook.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "torch>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "pydantic>=2.0.0",
    "SQLAlchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "bandit>=1.7.5",
    "safety>=2.3.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.1.0",
    "pytest-xdist>=3.3.0",
    "hypothesis>=6.82.0",
    "pre-commit>=3.3.0",
    "moto>=4.1.0",
    "responses>=0.23.0",
]
perf = [
    "memory-profiler>=0.61.0",
    "line-profiler>=4.1.0",
    "py-spy>=0.3.14",
    "scalene>=1.5.0",
]
monitoring = [
    "prometheus-client>=0.17.0",
    "grafana-api>=1.0.0",
]

[project.scripts]
trading-bot = "trading_bot.main:main"

[project.urls]
Homepage = "https://github.com/alphalgo/trading-bot"
Documentation = "https://alphalgo.github.io/trading-bot"
Repository = "https://github.com/alphalgo/trading-bot.git"
Issues = "https://github.com/alphalgo/trading-bot/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["trading_bot*"]
exclude = ["tests*", "docs*", "examples*"]

# =============================================================================
# BLACK CONFIGURATION
# =============================================================================
[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.env
  | _build
  | buck-out
  | build
  | dist
  | venv
  | \.venv
  | __pycache__
  | \.pytest_cache
  | htmlcov
  | \.coverage
  | \.hypothesis
  | mlruns
  | checkpoints
  | logs
  | backups
  | \.vscode
  | \.windsurf
  | trade_journal
)/
'''
skip-string-normalization = false

# =============================================================================
# ISORT CONFIGURATION
# =============================================================================
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = [
    "**/venv/**",
    "**/.venv/**",
    "**/__pycache__/**",
    "**/.git/**",
    "**/build/**",
    "**/dist/**",
    "**/.eggs/**",
    "**/.tox/**",
    "**/.mypy_cache/**",
    "**/htmlcov/**",
    "**/.coverage/**",
    "**/.pytest_cache/**",
    "**/mlruns/**",
    "**/checkpoints/**",
    "**/logs/**",
    "**/backups/**",
]
known_first_party = ["trading_bot"]
known_third_party = [
    "numpy",
    "pandas",
    "scipy",
    "sklearn",
    "torch",
    "transformers",
    "fastapi",
    "uvicorn",
    "pydantic",
    "sqlalchemy",
    "pytest",
]

# =============================================================================
# FLAKE8 CONFIGURATION (via setup.cfg style in pyproject.toml)
# =============================================================================
[tool.flake8]
max-line-length = 100
extend-ignore = [
    "E203",  # Whitespace before ':'
    "W503",  # Line break before binary operator
    "E501",  # Line too long (handled by black)
]
exclude = [
    ".git",
    "__pycache__",
    "venv",
    ".venv",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
    ".tox",
    ".mypy_cache",
    "htmlcov",
    ".coverage",
    ".pytest_cache",
    "mlruns",
    "checkpoints",
    "logs",
    "backups",
    ".vscode",
    ".windsurf",
    "trade_journal",
]
max-complexity = 15
show-source = true
statistics = true

# =============================================================================
# MYPY CONFIGURATION
# =============================================================================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
show_error_context = true
pretty = true
ignore_missing_imports = true
follow_imports = "skip"
exclude = [
    "tests/",
    "test_.*",
    "conftest.py",
    "venv/",
    ".venv/",
    "__pycache__/",
    "build/",
    "dist/",
    "\\.tox/",
    "\\.mypy_cache/",
    "mlruns/",
    "checkpoints/",
    "trade_journal/",
]

# Per-module options
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# =============================================================================
# BANDIT CONFIGURATION
# =============================================================================
[tool.bandit]
exclude_dirs = [
    "tests/",
    "test_.*",
    "venv/",
    ".venv/",
    "__pycache__/",
    "build/",
    "dist/",
    "mlruns/",
    "checkpoints/",
    "logs/",
    "backups/",
    "trade_journal/",
]
skips = [
    "B101",  # assert_used - OK in internal code
    "B311",  # random - Used for non-crypto purposes
]

# =============================================================================
# PYTEST CONFIGURATION
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests", "trading_bot/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--timeout=180",
    "--cov-fail-under=0",
]
markers = [
    "unit: Fast unit tests (< 1s each)",
    "integration: Component integration tests",
    "system: Full system integration tests",
    "e2e: End-to-end tests",
    "ml: Machine learning model tests",
    "slow: Tests requiring > 10s to run",
    "asyncio: Async/await tests",
    "broker: Tests requiring broker connection",
    "database: Tests requiring database",
    "network: Tests requiring network access",
    "performance: Performance benchmark tests",
    "stress: Stress and load tests",
    "risk: Risk management tests",
    "simulation: Paper trading and simulation tests",
    "security: Security-related tests",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning:tensorflow.*",
    "ignore::DeprecationWarning:tf_keras.*",
    "ignore::DeprecationWarning:keras.*",
    "ignore::FutureWarning:sklearn.*",
    "ignore::DeprecationWarning:numpy.*",
    "ignore::DeprecationWarning:pandas.*",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning:faiss.*",
    "ignore:.*deprecated.*:DeprecationWarning",
    "ignore:.*will be removed.*:FutureWarning",
]

# =============================================================================
# COVERAGE CONFIGURATION
# =============================================================================
[tool.coverage.run]
source = ["trading_bot"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "*/.tox/*",
    "*/conftest.py",
    "*/mlruns/*",
    "*/checkpoints/*",
    "*/trade_journal/*",
]
branch = true
timid = false

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 0
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# =============================================================================
# PRE-COMMIT HOOKS
# =============================================================================
[tool.pre-commit]
repos = [
    {repo = "https://github.com/pre-commit/pre-commit-hooks", rev = "v4.4.0", hooks = [
        {id = "trailing-whitespace"},
        {id = "end-of-file-fixer"},
        {id = "check-yaml"},
        {id = "check-added-large-files", args = ["--maxkb=1000"]},
        {id = "check-merge-conflict"},
        {id = "check-json"},
        {id = "debug-statements"},
    ]},
    {repo = "https://github.com/psf/black", rev = "23.7.0", hooks = [
        {id = "black", language_version = "python3.11"},
    ]},
    {repo = "https://github.com/pycqa/isort", rev = "5.12.0", hooks = [
        {id = "isort", args = ["--profile", "black"]},
    ]},
    {repo = "https://github.com/pycqa/flake8", rev = "6.1.0", hooks = [
        {id = "flake8", additional_dependencies = ["flake8-docstrings"]},
    ]},
    {repo = "https://github.com/pre-commit/mirrors-mypy", rev = "v1.5.0", hooks = [
        {id = "mypy", args = ["--ignore-missing-imports"]},
    ]},
    {repo = "https://github.com/PyCQA/bandit", rev = "1.7.5", hooks = [
        {id = "bandit", args = ["-ll"]},
    ]},
]
